--- a/package.json
+++ b/package.json
@@ -1,33 +1,33 @@
 {
   "type": "module",
-  "name": "pact-tests",
-  "description": "This project was bootstrapped with Fastify-CLI.",
+  "name": "handshake-bargain",
+  "description": "Bargain with an API, handshake...It's all right!",
   "version": "1.0.0",
-  "main": "app.ts",
+  "main": "src/index.ts",
+  "author": "g4rcez",
+  "license": "MIT",
   "directories": {
     "test": "test"
   },
   "scripts": {
-    "dev": "tsx ./src/app.ts",
-    "contract": "tsx ./src/openapi.ts",
+    "watch": "vitest watch",
     "test": "vitest"
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
+  "keywords": [
+    "contract",
+    "tests",
+    "swagger",
+    "openapi",
+    "typescript",
+    "zod"
+  ],
   "dependencies": {
     "@anatine/zod-openapi": "2.2.3",
-    "@fastify/autoload": "^5.0.0",
-    "@fastify/sensible": "^5.0.0",
-    "@stoplight/spectral-cli": "6.11.0",
+    "@fastify/swagger": "8.14.0",
+    "@fastify/swagger-ui": "3.0.0",
     "@stoplight/spectral-core": "1.18.3",
     "@stoplight/spectral-functions": "1.7.2",
-    "@types/qs": "6.9.11",
     "axios": "1.6.7",
-    "fastify": "^4.0.0",
-    "fastify-cli": "^5.9.0",
-    "fastify-plugin": "^4.0.0",
-    "generate-schema": "2.6.0",
     "genson-js": "0.0.8",
     "openapi3-ts": "4.2.1",
     "qs": "6.11.2",
@@ -36,23 +36,14 @@
   },
   "devDependencies": {
     "@pact-foundation/pact": "12.2.0",
-    "@types/node": "^20.4.4",
-    "@types/tap": "^15.0.5",
-    "c8": "^7.13.0",
-    "concurrently": "^8.2.2",
-    "fastify-tsconfig": "^2.0.0",
-    "tap": "^16.1.0",
-    "ts-node": "^10.4.0",
+    "@types/node": "20.4.4",
+    "@types/qs": "6.9.11",
+    "c8": "7.13.0",
+    "fastify": "4.0.0",
+    "tap": "16.1.0",
+    "ts-node": "10.4.0",
     "tsx": "4.7.0",
-    "typescript": "^5.2.2",
+    "typescript": "5.2.2",
     "vitest": "1.2.2"
-  },
-  "tap": {
-    "node-arg": [
-      "--no-warnings",
-      "--experimental-loader",
-      "ts-node/esm"
-    ],
-    "coverage": false
   }
 }
